@@ -1,21 +1,22 @@
 package com.pro100user.bookstorebackend.controller;
 
+import com.pro100user.bookstorebackend.annotation.CurrentUser;
 import com.pro100user.bookstorebackend.dto.BookCreateDTO;
 import com.pro100user.bookstorebackend.dto.BookDTO;
 import com.pro100user.bookstorebackend.dto.BookListDTO;
 import com.pro100user.bookstorebackend.dto.BookUpdateDTO;
 import com.pro100user.bookstorebackend.entity.enums.Language;
-import com.pro100user.bookstorebackend.entity.enums.Type;
+import com.pro100user.bookstorebackend.security.UserSecurity;
 import com.pro100user.bookstorebackend.service.BookService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RestController
@@ -27,18 +28,17 @@ public class BookController {
 
     @GetMapping
     public List<BookListDTO> books(
-            @RequestParam(defaultValue = "1") int page,
-            @RequestParam(defaultValue = "25") int size,
-            @RequestParam(required = false) String search
+            @CurrentUser UserSecurity userSecurity
     ) {
-        return bookService.getPageBooks(page, size);
+        return bookService.getAll(userSecurity);
     }
 
     @GetMapping("{id}")
     public BookDTO details(
-            @PathVariable("id") Long id
+            @PathVariable("id") Long id,
+            @CurrentUser UserSecurity userSecurity
     ) {
-        return bookService.getById(id);
+        return bookService.getById(id, userSecurity);
     }
 
     @PostMapping
@@ -62,6 +62,29 @@ public class BookController {
         return bookService.delete(id);
     }
 
+    @PostMapping("photo/{id}")
+    public BookListDTO setPhoto(
+            @RequestParam("image") MultipartFile file,
+            @PathVariable("id") Long bookId
+    ) {
+        return bookService.setPhoto(file, bookId);
+    }
+
+    @PutMapping("photo/{id}")
+    public boolean updatePhoto(
+            @RequestParam("image") MultipartFile file,
+            @PathVariable("id") Long bookId
+    ) {
+        return bookService.updatePhoto(file, bookId);
+    }
+
+    @DeleteMapping("photo/{id}")
+    public boolean deletePhoto(
+            @PathVariable("id") Long bookId
+    ) {
+        return bookService.deletePhoto(bookId);
+    }
+
 
     @GetMapping("count")
     public Map<String, Long> getCount() {
@@ -71,14 +94,7 @@ public class BookController {
     @GetMapping("languages")
     public List<String> languages() {
         return Arrays.stream(Language.values())
-                .map(type -> type.name())
-                .collect(Collectors.toList());
-    }
-
-    @GetMapping("types")
-    public List<String> types() {
-        return Arrays.stream(Type.values())
-                .map(type -> type.name())
-                .collect(Collectors.toList());
+                .map(Language::name)
+                .toList();
     }
 }
